adding serverless io publication detail

--- a/publications/serverless-io.bib
+++ b/publications/serverless-io.bib
@@ -1,8 +1,10 @@
 @article {serverless-io,
    author = {Kim, Jeongchul and Lee, Kyungyong},
-   affiliation = {Kookmin University, Seoul, S. Korea},
    title = {I/O Resource Isolation of Public Cloud Serverless Function Runtimes for Data-Intensive Applications},
    journal = {Cluster Computing},
    publisher = {Springer Netherlands},
-   year = {2020}
+   year = {2020},
+   doi = {10.1007/s10586-020-03103-4},
+   isbn = {1573-7543},
+   url = {https://doi.org/10.1007/s10586-020-03103-4}
 }
