adding reactor ieee link and update mpec-tcc info

--- a/publications/mpec-tcc.bib
+++ b/publications/mpec-tcc.bib
@@ -1,12 +1,10 @@
 @ARTICLE{mpec-tcc,
-author={J. {Kim} and M. {Son} and K. {Lee}},
-journal={IEEE Transactions on Cloud Computing},
-title={MPEC: Distributed Matrix Multiplication Performance Modeling on a Scale-out Cloud Environment for Data Mining Jobs},
-year={2019},
-volume={},
-number={},
-pages={1-1},
-keywords={Task analysis;Cloud computing;Prediction algorithms;Sparse matrices;Data mining;Computational modeling;Machine learning algorithms;Big data analytics;Distributed matrix multiplication;Performance modeling;Cloud computing},
-doi={10.1109/TCC.2019.2950400},
-ISSN={},
-month={},}
+  author={Kim, Jeongchul and Son, Myungjun and Lee, Kyungyong},
+  journal={IEEE Transactions on Cloud Computing},
+  title={MPEC: Distributed Matrix Multiplication Performance Modeling on a Scale-Out Cloud Environment for Data Mining Jobs},
+  year={2022},
+  volume={10},
+  number={1},
+  pages={521-538},
+  doi={10.1109/TCC.2019.2950400}
+}
